--- a/index.html
+++ b/index.html
@@ -6,17 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="images/faveicon-anish.png" type="image/x-icon">
     <title>Anish Tanwar - Web App Developer</title>
-    <!-- ================= CSS FILE =============== -->
+    <!-- ================= CSS FILE ================= -->
     <link rel="stylesheet" href="style/style.css">
-    <!-- ================= REMIX ICON =============== -->
+    <!-- ================= REMIX ICON ================= -->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
-    <!-- ================= AOS SCROLL REVEL ANIMATION =============== -->
+    <!-- ================= AOS SCROLL REVEL ANIMATION ================= -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <!-- GSAP ANIMATION -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <!-- ================= GSAP ANIMATION =================-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     
 </head>
-
 <body>
     <!--================= HEADER =================-->
     <header class="header" id="header">
@@ -95,7 +94,7 @@
         </nav>
     </header>
 
-    <!--================== MAIN ==================-->
+    <!--================= MAIN ==================-->
     <main class="main " id="#">
         <div class="home___container container grid">
             <div class="home__left-box">
@@ -122,7 +121,7 @@
         </div>
     </main>
 
-    <!--================== ABOUT ==================-->
+    <!--================= ABOUT ==================-->
     <section class="About__container section" id="about">
         <div class="about__container container grid">
             <div class="about__left-box" data-aos="fade-right"
@@ -142,22 +141,18 @@
                 </h3>
 
                 <ul class="social__icons">
-                    <li data-aos="fade-right"
-                    data-aos-offset="100"
-                    data-aos-easing="ease-in-sine"
-                    data-aos-duration="1500"><i class="ri-github-fill"></i></li>
-                    <li data-aos="fade-right"
-                    data-aos-offset="100"
-                    data-aos-easing="ease-in-sine"
-                    data-aos-duration="2000"><i class="ri-linkedin-box-fill"></i></li>
-                    <li data-aos="fade-right"
-                    data-aos-offset="100"
-                    data-aos-easing="ease-in-sine"
-                    data-aos-duration="2500"><i class="ri-instagram-fill"></i></li>
-                    <li data-aos="fade-right"
-                    data-aos-offset="100"
-                    data-aos-easing="ease-in-sine"
-                    data-aos-duration="3000"><i class="ri-youtube-fill"></i></li>
+                    <li>
+                        <i class="ri-github-fill"></i>
+                    </li>
+                    <li>
+                        <i class="ri-linkedin-box-fill"></i>
+                    </li>
+                    <li>
+                        <i class="ri-instagram-fill"></i>
+                    </li>
+                    <li>
+                        <i class="ri-youtube-fill"></i>
+                    </li>
                 </ul>
 
                 <button class="hire__me" data-aos="fade-up" data-aos-offset="100"  data-aos-duration="2000">Hire me <span><i class="ri-arrow-right-line"></i></span></button>
@@ -165,7 +160,7 @@
         </div>
     </section>
 
-    <!--================== SKILLS ==================-->
+    <!--================= SKILLS ==================-->
     <section class="Skills__container section" id="skills">
         <div class="skills__container container grid">
             <img class="background-img" src="images/background.svg" alt="">
@@ -368,7 +363,7 @@
         </div>
     </section>
 
-    <!--================== PROJECTS ==================-->
+    <!--================= PROJECTS ==================-->
     <section class="Project__container section" id="projects">
         <div class="project__container grid">
             <h2>OUR PORTFOLIO</h2>
@@ -593,7 +588,7 @@
         </div>
     </section>
 
-    <!--===================== SERVICES ====================-->
+    <!--================= SERVICES ====================-->
     <section class="Services__container section" id="services">
         <div class="services__container container grid">
             <h1>What I Do<span>.</span></h1>
@@ -635,7 +630,7 @@
         </div>
     </section>
 
-    <!--================== QUALIFICATION ==================-->
+    <!--================= QUALIFICATION ==================-->
     <section class="Qualification__container section" id="qualification">
 
         <h1>My Qualification<span>.</span></h1>
@@ -711,7 +706,7 @@
 
     </section>
 
-    <!--================== FOOTER ==================-->
+    <!--================= FOOTER ==================-->
     <section class="Footer__container section">
         <div class="footer__container container grid">
         <div class="top__box">
@@ -768,7 +763,7 @@
     </div>
     </section>
 
-    <!--================== SCROOL UP ==================-->
+    <!--================= SCROOL UP ==================-->
     <a href="#" class="scrollup" id="scroll-up">
         <i class="ri-arrow-up-line"></i>
     </a>
@@ -780,12 +775,7 @@
 <script>
     AOS.init();
 </script>
-<!-- SCRIPT FILE -->
+<!--================= SCRIPT FILE =================-->
 <script src="script/script.js"></script>
-
-
-
-
-
 </body>
 </html>
