--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     </li>
                 </ul>
 
-                <button class="hire__me" data-aos="fade-up" data-aos-offset="100"  data-aos-duration="2000">Hire me <span><i class="ri-arrow-right-line"></i></span></button>
+                <button class="hire__me">Hire me <span><i class="ri-arrow-right-line"></i></span></button>
             </div>
         </div>
     </section>
