--- a/index.html
+++ b/index.html
@@ -142,16 +142,24 @@
 
                 <ul class="social__icons">
                     <li>
-                        <i class="ri-github-fill"></i>
+                        <a href="https://github.com/anishtanwar11">
+                            <i class="ri-github-fill"></i>
+                        </a>
                     </li>
                     <li>
-                        <i class="ri-linkedin-box-fill"></i>
+                        <a href="https://www.linkedin.com/in/thisisanishtanwar/">
+                            <i class="ri-linkedin-box-fill"></i>
+                        </a>
                     </li>
                     <li>
-                        <i class="ri-instagram-fill"></i>
+                            <a href="https://www.instagram.com/thisisanishtanwar/">
+                            <i class="ri-instagram-fill"></i>
+                        </a>
                     </li>
                     <li>
-                        <i class="ri-youtube-fill"></i>
+                        <a href="https://www.youtube.com/@FrontendStudios-gy8iq">
+                            <i class="ri-youtube-fill"></i>
+                        </a>
                     </li>
                 </ul>
 
@@ -732,22 +740,22 @@
             <div class="top__right-box">
                 <ul>
                     <li>
-                        <a href="#">
+                        <a href="https://github.com/anishtanwar11">
                             <i class="ri-github-fill"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="https://www.linkedin.com/in/thisisanishtanwar/">
                             <i class="ri-linkedin-box-fill"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="https://www.instagram.com/thisisanishtanwar/">
                             <i class="ri-instagram-fill"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="https://www.youtube.com/@FrontendStudios-gy8iq">
                             <i class="ri-youtube-fill"></i>
                         </a>
                     </li>
