--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     
 </head>
 <body>
+    <div id="preloader">
+        <img src="images/faveicon-anish.png" alt="">
+    </div>
+
     <!--================= HEADER =================-->
     <header class="header" id="header">
         <nav class="nav container">
@@ -785,5 +789,16 @@
 </script>
 <!--================= SCRIPT FILE =================-->
 <script src="script/script.js"></script>
+
+
+
+
+<script>
+    var loader = document.getElementById("preloader");
+
+    window.addEventListener("load", function(){
+        loader.style.display = "none";
+    })
+</script>
 </body>
 </html>
