Add Resume Button

--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
                     </li>
 
                     <li class="nav__item">
-                        <a href="#skills" class="nav__link">
-                            <i class="ri-trophy-line"></i> Skills
+                        <a href="#projects" class="nav__link">
+                            <i class="ri-gallery-line"></i> Portfolio
                         </a>
                     </li>
 
                     <li class="nav__item">
-                        <a href="#projects" class="nav__link">
-                            <i class="ri-gallery-line"></i> Portfolio
+                        <a href="#skills" class="nav__link">
+                            <i class="ri-trophy-line"></i> Skills
                         </a>
                     </li>
 
@@ -114,7 +114,7 @@
                     design.
                 </h3>
                 <div class="home__buttons">
-                    <button>Get a Proposal</button>
+                    <button class="contact">Get a Proposal</button>
                     <button><a href="#projects">Portfolio</a></button>
                 </div>
             </div>
@@ -165,11 +165,16 @@
                     </li>
                 </ul>
 
-                <button class="hire__me">Hire me <span><i class="ri-arrow-right-line"></i></span></button>
+                <button class="hire__me">
+                    <a href="images/resume.pdf" download>
+                        <i class="ri-download-2-line"></i> Resume
+                    </a>
+                </button>
             </div>
         </div>
     </section>
 
+    
     <!--================= SKILLS ==================-->
     <section class="Skills__container section" id="skills">
         <div class="skills__container container grid">
@@ -580,6 +585,7 @@
             </div>
         </div>
     </section>
+
 
     <!--================= SERVICES ====================-->
     <section class="Services__container section" id="services">
