add new project

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.instagram.com/thisisanishtanwar/">
+                        <a href="https://www.instagram.com/frontend_studios/">
                             <i class="ri-instagram-fill"></i>
                         </a>
                     </li>
@@ -174,7 +174,7 @@
         </div>
     </section>
 
-    
+
     <!--================= SKILLS ==================-->
     <section class="Skills__container section" id="skills">
         <div class="skills__container container grid">
@@ -393,12 +393,32 @@
 
             <!-- ALL -->
             <div class="project__main" Data-Item="all" Data-Default="true">
+                <div class="project__card" data-name="Noise Clone Web App"
+                    data-discription="Tech Stack: Angular, Typescript, HTML, and CSS"
+                    data-link="https://gonoise-clone.netlify.app/"
+                    data-video="https://www.youtube.com/embed/wCcnZ89ITiU?si=cZqZ_WXcYSQjtFBQ">
+                    <img src="images/portfolio/all/noise.png" alt="">
+                    <div class="cover_icon">
+                        <i class="ri-links-line"></i>
+                    </div>
+                </div>
+
                 <div class="project__card" data-name="Shoping Web App"
                     data-discription="Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio natus delectus maiores. Dolore, maiores. Aspernatur placeat similique corporis unde velit veritatis totam magnam neque provident!"
                     data-link="https://nobis-store.netlify.app/"
                     data-video="https://www.youtube.com/embed/wCcnZ89ITiU?si=cZqZ_WXcYSQjtFBQ">
 
                     <img src="images/portfolio/all/webapp-1.png" alt="">
+                    <div class="cover_icon">
+                        <i class="ri-links-line"></i>
+                    </div>
+                </div>
+
+                <div class="project__card" data-name="on.time (TODO List App)"
+                    data-discription="Tech Stack: Angular, Typescript, HTML, and CSS"
+                    data-link="https://ontime-anish.netlify.app/"
+                    data-video="https://www.youtube.com/embed/wCcnZ89ITiU?si=cZqZ_WXcYSQjtFBQ">
+                    <img src="images/portfolio/web-app/webapp-3.png" alt="">
                     <div class="cover_icon">
                         <i class="ri-links-line"></i>
                     </div>
@@ -438,26 +458,6 @@
 
                 <div class="project__card" data-name="Shoping Web App"
                     data-discription="Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio natus delectus maiores. Dolore, maiores. Aspernatur placeat similique corporis unde velit veritatis totam magnam neque provident!"
-                    data-link="https://nobisfashion.netlify.app/"
-                    data-video="https://www.youtube.com/embed/wCcnZ89ITiU?si=cZqZ_WXcYSQjtFBQ">
-                    <img src="images/portfolio/all/website-2.png" alt="">
-                    <div class="cover_icon">
-                        <i class="ri-links-line"></i>
-                    </div>
-                </div>
-
-                <div class="project__card" data-name="Shoping Web App"
-                    data-discription="Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio natus delectus maiores. Dolore, maiores. Aspernatur placeat similique corporis unde velit veritatis totam magnam neque provident!"
-                    data-link="https://netflixclone-pixinit.netlify.app/"
-                    data-video="https://www.youtube.com/embed/wCcnZ89ITiU?si=cZqZ_WXcYSQjtFBQ">
-                    <img src="images/portfolio/all/webapp-3.png" alt="">
-                    <div class="cover_icon">
-                        <i class="ri-links-line"></i>
-                    </div>
-                </div>
-
-                <div class="project__card" data-name="Shoping Web App"
-                    data-discription="Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio natus delectus maiores. Dolore, maiores. Aspernatur placeat similique corporis unde velit veritatis totam magnam neque provident!"
                     data-link="https://anishtanwar11.github.io/HTML-Template1/"
                     data-video="https://www.youtube.com/embed/wCcnZ89ITiU?si=cZqZ_WXcYSQjtFBQ">
                     <img src="images/portfolio/all/website-3.png" alt="">
@@ -479,6 +479,27 @@
 
             <!-- WEB APP -->
             <div class="project__main" Data-Item="web-app">
+
+                <div class="project__card" data-name="Noise Clone Web App"
+                    data-discription="Tech Stack: Angular, Typescript, HTML, and CSS"
+                    data-link="https://gonoise-clone.netlify.app/"
+                    data-video="https://www.youtube.com/embed/wCcnZ89ITiU?si=cZqZ_WXcYSQjtFBQ">
+                    <img src="images/portfolio/web-app/noise.png" alt="">
+                    <div class="cover_icon">
+                        <i class="ri-links-line"></i>
+                    </div>
+                </div>
+
+                <div class="project__card" data-name="on.time (TODO List App)"
+                    data-discription="Tech Stack: Angular, Typescript, HTML, and CSS"
+                    data-link="https://ontime-anish.netlify.app/"
+                    data-video="https://www.youtube.com/embed/wCcnZ89ITiU?si=cZqZ_WXcYSQjtFBQ">
+                    <img src="images/portfolio/web-app/webapp-3.png" alt="">
+                    <div class="cover_icon">
+                        <i class="ri-links-line"></i>
+                    </div>
+                </div>
+
                 <div class="project__card" data-name="Shoping Web App"
                     data-discription="Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio natus delectus maiores. Dolore, maiores. Aspernatur placeat similique corporis unde velit veritatis totam magnam neque provident!"
                     data-link="https://nobis-24.netlify.app/"
@@ -495,16 +516,6 @@
                     data-video="https://www.youtube.com/embed/wCcnZ89ITiU?si=cZqZ_WXcYSQjtFBQ">
 
                     <img src="images/portfolio/web-app/webapp-2.png" alt="">
-                    <div class="cover_icon">
-                        <i class="ri-links-line"></i>
-                    </div>
-                </div>
-
-                <div class="project__card" data-name="Shoping Web App"
-                    data-discription="Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio natus delectus maiores. Dolore, maiores. Aspernatur placeat similique corporis unde velit veritatis totam magnam neque provident!"
-                    data-link="https://tanwaranish.netlify.app/"
-                    data-video="https://www.youtube.com/embed/wCcnZ89ITiU?si=cZqZ_WXcYSQjtFBQ">
-                    <img src="images/portfolio/web-app/webapp-3.png" alt="">
                     <div class="cover_icon">
                         <i class="ri-links-line"></i>
                     </div>
@@ -735,7 +746,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.instagram.com/thisisanishtanwar/">
+                            <a href="https://www.instagram.com/frontend_studios/">
                                 <i class="ri-instagram-fill"></i>
                             </a>
                         </li>
