--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- ================= GSAP ANIMATION =================-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-
+    <!-- ================= FOR CONTACT FORM WORKING ================= -->
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 </head>
 
 <body>
@@ -853,29 +854,28 @@
                     <form action="" class="contact__form" id="contact-form">
 
                         <div class="contact__form-div">
-                            <label for="" class="contact__form-tag">Name</label>
-                            <input type="text" name="from_name" required placeholder="write your name"
-                                class="contact__form-input" id="contact-name">
+                            <label for="user_name" class="contact__form-tag">Name</label>
+                            <input type="text" name="user_name" placeholder="write your name"
+                                class="contact__form-input" id="user_name">
                         </div>
 
                         <div class="contact__form-div">
-                            <label for="" class="contact__form-tag">Mail</label>
-                            <input type="email" name="user_email" required placeholder="write your email"
-                                class="contact__form-input" id="contact-email">
+                            <label for="user_email" class="contact__form-tag">Mail</label>
+                            <input type="email" name="user_email" placeholder="write your email"
+                                class="contact__form-input" id="user_email">
                         </div>
 
                         <div class="contact__form-div contact__form-area">
-                            <label for="contact-project" class="contact__form-tag">Project</label>
-                            <textarea name="message" placeholder="Write your project..." id="contact-project"
+                            <label for="user_project" class="contact__form-tag">Project</label>
+                            <textarea name="user_project" placeholder="Write your project..." id="user_project"
                                 class="contact__form-input"></textarea>
                         </div>
 
                         <p class="contact__message" id="contact-message"></p>
-
-                        <button type="submit" class="contact__button">
-                            Submit
-                        </button>
+                        
+                        <input type="button" id="contact-button" class="contact__button" value="Send" onclick="sendMail()" />
                     </form>
+
                 </div>
             </div>
         </div>
@@ -903,9 +903,8 @@
 
 <!-- FOR CONTACT FORM -->
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-
 <script>
-    /*---logi-sign-up-form----------*/
+    /*---FOR CONTACT FORM TOGGLE BUTTON----------*/
     $(document).on('click', '.contact', function () {
         $('.Contact__container').addClass('contact-active')
     });
