--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
                     <li class="nav__item">
                         <a href="#qualification" class="nav__link">
-                            <i class="ri-book-open-line"></i> Qualification
+                            <i class="ri-book-open-line"></i> Exprience
                         </a>
                     </li>
 
@@ -638,7 +638,7 @@
     <!--================= QUALIFICATION ==================-->
     <section class="Qualification__container section" id="qualification">
 
-        <h1>My Qualification<span>.</span></h1>
+        <h1>Work Exprience & Qualification<span>.</span></h1>
         <span class="section__subtitle">Experience & education</span>
 
         <div class="qualification__container container grid">
