Update Resume file

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 </ul>
 
                 <button class="hire__me">
-                    <a href="images/resume.pdf" download>
+                    <a href="images/Anish_Tanwar-Resume-2024.pdf" download>
                         <i class="ri-download-2-line"></i> Resume
                     </a>
                 </button>
